v0.3.9
-------

- update built-in theme `less`
- add one more demo link
- typofixed in documentation
- update default config.toml(minor typofix)

v0.3.8
------

- add `status` command to ililac
- fix requirements file
- use theme `less` as default theme instead of `classic`

v0.3.7
-------

- include ililac as a built-in tool

v0.3.6
------

- improve the logger, use stdout as logger output target

v0.3.5
-------

- separate templates to directory "templates"
- add an optional configuation file `theme.toml` to theme
- add an optional configuation section to `config.toml`, prior to theme's
`theme.toml`

v0.3.4
------

- update classic theme

v0.3.3
-------

- Fix some themes, codes
- Add docs

v0.3.2
------

- Add optional setting `root_path` to configuration, also the support for
sub_directory

- Use class theme a submodule instead of mess files

v0.3.1
------

- add watch feature for server command
- config's `templates` changed to `theme`

v0.3.0
------

- other attributes is ok in each post

v0.2.9
------

- add a server
- use disqus coment
- use signal to manage process
- add makefile for users to manage blog

v0.2.0
-------

- conf.toml => config.toml
- remove plugin(blinker) support