@@ -1,6 +1,5 @@
 include LICENSE-MIT README.md requirements.pip
 recursive-include lilac/resources *
-recursive-include lilac/ililac *.py
 recursive-exclude docs *.pyc
 recursive-exclude docs *.pyo
 recursive-exclude lilac .*.swp
